# rooted-machines-code

./: README.md
.local-backups/2026-06-03-git-pull/: autoadjust_harvester.local-before-pull.ino
ble_and_aws/: ble-wrapper.sh  deploy-to-pi-one.sh  deploy-to-pi-two.sh  deploy-with-iot.sh  requirements.txt  rooted-ble.timer
ble_and_aws/aws/: aws_iot_registration.py  command_handler.py  machine_preset.py  provisioner.py  telemetry.py
ble_and_aws/pi-src/: README.md  deploy-with-iot.sh  rooted-ble.service  rooted-iot.service  rooted-telemetry.service  setup-aws-iot.sh
ble_and_aws/setup-scripts/: setup-nm.sh
customer-code/superior-super-foods/: pi.txt
docs/: GITHUB.md
machine-code/autoadjust-harvester/obsolete-code/te-cli/: README.md  pyproject.toml
machine-code/autoadjust-harvester/obsolete-code/te-cli/.github/workflows/: lint_check.yml
machine-code/autoadjust-harvester/obsolete-code/te-cli/te/: __init__.py
machine-code/autoadjust-harvester/obsolete-code/te-cli/te/interface/: guide.py
machine-code/autoadjust-harvester/obsolete-code/te-cli/te/interface/hid/: hid_guide.py
machine-code/autoadjust-harvester/obsolete-code/te-cli/te/interface/hid/comm_interface/: __init__.py
machine-code/autoadjust-harvester/obsolete-code/te-cli/te/interface/j1939/: __init__.py  j1939_guide.py  j1939_messages.py  j1939_te.py
machine-code/autoadjust-harvester/obsolete-code/te-cli/te/interface/j1939/comm_interface/: __init__.py  j1939_ca_linux.py  j1939_message.py
machine-code/harvester/: SETUP_GUIDE_READ_ME.md  (+3 more)
seeder/: tabletop_seeder_tcp_server.py
wifi/: WIFI.md
(+155 files in other folders)
