[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "te-cli"
authors = [
    { name = "Tomasz Rybiarczyk", email = "tomasz_rybiarczyk@grayhill.com" },
    { name = "Raj Patel", email = "raj_patel@grayhill.com" },
    { name = "Robert Obrochta", email = "robert_obrochta@grayhill.com"}
]
description = "A CLI to control the Touch Encoder"
readme = "README.md"
requires-python = ">3.10"
keywords = ["cli", "touch-encoder", "te"]
dynamic = ["version"]

dependencies = [
    "hidapi==0.14.0.post4",
    "can-j1939==2.0.12",
    "libusb==1.0.27.post3",
    "rich==13.7.1",
    "pywin32; sys_platform == 'win32'"
]

[project.optional-dependencies]
dev = [
    "flake8",
]

[project.urls]
Repository = "https://github.com/Grayhill/te-cli.git"

[project.scripts]
te = "te.cli.entry:main"

[tool.setuptools.package-dir]
"te"= "te"

[tool.setuptools_scm]
version_file = "te/_version.py"
version_scheme = "release-branch-semver"
local_scheme = "node-and-date"